--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -35,4 +34,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.searchBtn {
+  margin-left: 8px !important;
+}
+
+.results {
+  height: 70vh;
+  width: 80vw;
+  background-color: #494e5b !important;
+  display: flex;
+  flex-wrap: wrap;
+  overflow: auto;
+  justify-content: center;
+}
+
+.filmCard {
+  margin: 1em !important;
 }
